@@ -16,6 +16,18 @@ $Source$
 
 
 $Log$
+Revision 1.32  2006/02/09 00:14:50  hjanuschka
+datalib: mysql/ catch failed logins
+core: fixed some setuid problems with datalib
+core: zero worker detected and logged
+core: network code re-worked, much faster and cleaner now
+core: encode/decode removed
+php: encode/decode removed
+ui: topology map manager added
+ui: nicer menu (flap)
+ui: server_detail (added)
+startup sh: pre-start check if logfile is writeable
+
 Revision 1.31  2006/01/16 20:51:41  hjanuschka
 performance stuff moved to perf.c
 timeing information on perf handler
@@ -150,6 +162,7 @@ CVS Header
 #define CONN_ERROR "Connection error"
 #define RECV_ERROR "Recieve Error"
 #define PROTOCOL_ERROR "Protocol Error"
+#define TIMEOUT_ERROR "Recv() timedout"
 
 #define CONN_TIMEOUT 15
 
@@ -168,7 +181,216 @@ static void bartlby_conn_timeout(int signo) {
  	connection_timed_out = 1;
 }
 
+
+
 void bartlby_check_active(struct service * svc, char * cfgfile) {
+	int client_socket;
+	int client_connect_retval=-1;
+	int return_bytes;
+	
+	
+	char return_buffer[1024];
+	char * client_request;
+	
+	
+	
+	
+	
+	
+	struct sockaddr_in remote_side;
+	struct hostent * remote_host;
+	struct sigaction act1, oact1;
+	
+	/*
+	NEW
+	*/
+	char * rmessage;
+	int sum_rmessage;
+	int char_idx=0, cur_char_idx=0;
+	
+	char * curr_line;
+	
+	
+	
+	
+	
+	connection_timed_out=0;
+	
+	if((remote_host = gethostbyname(svc->client_ip)) == 0) {
+		
+		sprintf(svc->new_server_text, "%s", DNS_ERROR);
+		svc->current_state=STATE_CRITICAL;
+		
+		return;
+	}
+	memset(&remote_side, '\0', sizeof(remote_side));
+	remote_side.sin_family=AF_INET;
+	remote_side.sin_addr.s_addr = htonl(INADDR_ANY);
+	remote_side.sin_addr.s_addr = ((struct in_addr *) (remote_host->h_addr))->s_addr;
+	remote_side.sin_port=htons(svc->client_port);
+	
+	if((client_socket = socket(AF_INET, SOCK_STREAM, 0)) == -1) {
+			
+		
+		sprintf(svc->new_server_text, "%s", SOCKET_CREATE_ERROR);
+		svc->current_state=STATE_CRITICAL;
+				
+		return;
+			
+			
+	}
+	act1.sa_handler = bartlby_conn_timeout;
+	sigemptyset(&act1.sa_mask);
+	act1.sa_flags=0;
+	#ifdef SA_INTERRUPT
+	act1.sa_flags |= SA_INTERRUPT;
+	#endif
+	
+	if(sigaction(SIGALRM, &act1, &oact1) < 0) {
+		
+		sprintf(svc->new_server_text, "%s", ALARM_ERROR);
+		svc->current_state=STATE_CRITICAL;
+				
+		return;
+	
+		
+	}
+	alarm(svc->service_check_timeout);
+	client_connect_retval = connect(client_socket, (void *) &remote_side, sizeof(remote_side));
+	alarm(0);
+	
+	if(connection_timed_out == 1 || client_connect_retval == -1) {
+		sprintf(svc->new_server_text, "%s", CONN_ERROR);
+		svc->current_state=STATE_CRITICAL;
+		close(client_socket);
+		return;
+	} 
+	
+	
+	/*
+		SEND Request
+	*/
+	connection_timed_out=0;
+	client_request=malloc(sizeof(char)*(strlen(svc->plugin)+strlen(svc->plugin_arguments)+30));
+	sprintf(client_request, "%s| %s|", svc->plugin, svc->plugin_arguments);
+	
+	//Encode it
+	bartlby_encode(client_request, strlen(client_request));
+	
+	//Send it
+	alarm(svc->service_check_timeout);
+	send(client_socket, client_request, (strlen(svc->plugin)+strlen(svc->plugin_arguments)+3),0);
+	//Check it
+	if(connection_timed_out == 1) {
+		
+		
+		sprintf(svc->new_server_text, "%s", CONN_ERROR);
+		svc->current_state=STATE_CRITICAL;
+		free(client_request);
+		return;
+	}
+	
+	free(client_request);
+	
+	//Recieve Reply
+	rmessage=malloc(sizeof(char)*(1024*4));
+	memset(rmessage, '\0', sizeof(char)*(1024*4));
+	alarm(svc->service_check_timeout);
+	connection_timed_out=0;
+	while((return_bytes=recv(client_socket, return_buffer, 1024, 0)) > 0 &&  sum_rmessage < 1024*4 && connection_timed_out == 0) {
+		return_buffer[return_bytes] = '\0';
+		strcat(rmessage, return_buffer);		
+		sum_rmessage += return_bytes;
+	}
+	
+	//_log("ALL: '%s'", rmessage);
+	
+	//Check if timed out or Receive error
+	if(connection_timed_out == 1 || return_bytes < 0) {
+		
+		if(connection_timed_out == 1) {
+			sprintf(svc->new_server_text, "%s", TIMEOUT_ERROR);
+		} else {
+			sprintf(svc->new_server_text, "%s", RECV_ERROR);
+		}
+		svc->current_state=STATE_CRITICAL;
+		free(rmessage);
+		return;
+	}
+	alarm(0);
+	close(client_socket);
+	
+	
+	
+	
+	cur_char_idx=0;
+	curr_line=malloc(sizeof(char) * (strlen(rmessage)+20));
+   	while(char_idx < strlen(rmessage)) {
+   		//_log("%c", rmessage[cur_char_idx]);
+   		
+   		curr_line[cur_char_idx]=rmessage[char_idx];
+   		if(rmessage[char_idx] == '\n' || char_idx == strlen(rmessage)) {
+   			curr_line[cur_char_idx]='\0';
+   			bartlby_action_handle_reply_line(svc, curr_line, cfgfile);
+   			cur_char_idx=0;	
+   			char_idx++;
+   			continue;	
+   		}
+   		cur_char_idx++;
+   		char_idx++;
+   	}
+	free(curr_line);
+	free(rmessage);
+	
+        return;
+		
+}
+void bartlby_action_handle_reply_line(struct service * svc, char * line, char * cfgfile) {
+	char * return_token;
+	if(strlen(line) == 0) {
+		return;	
+	}
+	if(strncmp(line, "OS:", 3) == 0) {
+		//_log("OS: '%s'", line);
+		return;	
+	}	
+	if(strncmp(line, "PERF: ", 6) == 0) {
+		//_log("PERF: '%s'", line);
+		bartlby_perf_track(svc,line, strlen(line), cfgfile);	
+		return;
+	}
+	//_log("DATA: '%s'", line);
+	return_token = strtok(line, "|");
+        if(return_token != NULL) {
+        	//Verfiy result code to be 0-2 :-) 
+        	if(return_token[0] != '0' && return_token[0] != '1' && return_token[0] != '2') {
+        		svc->current_state=STATE_UNKOWN;	
+        	} else {
+        		svc->current_state=atoi(return_token);
+        	}
+        	
+        	return_token = strtok(NULL, "|");
+        	if(return_token != NULL) {
+        		sprintf(svc->new_server_text, "%s", return_token);
+        	} else {
+        		
+        		sprintf(svc->new_server_text, "(empty output)");
+        		
+        	}	
+        	return;
+        } else {
+        	
+        	sprintf(svc->new_server_text, PROTOCOL_ERROR);
+        	svc->current_state=STATE_CRITICAL;
+        	return;
+        }
+	
+	
+	
+}
+
+/* 
+void bartlby_check_active_old(struct service * svc, char * cfgfile) {
 	int client_socket;
 	int client_connect_retval=-1;
 	int return_bytes;
@@ -186,7 +408,7 @@ void bartlby_check_active(struct service * svc, char * cfgfile) {
 	struct hostent * remote_host;
 	struct sigaction act1, oact1;
 	
-	FILE * perf_p;
+	
 	
 	connection_timed_out=0;
 	
@@ -359,6 +581,8 @@ void bartlby_check_active(struct service * svc, char * cfgfile) {
         return;
 		
 }
+*/
+
 void bartlby_check_group(struct service * svc, void * shm_addr) {
 	struct shm_header * hdr;
 	struct service * svcmap;
